force-app/main/default/objects/Product_Collection_Size__c/Product_Collection_Size__c.object-meta.xml
<CustomObject>
    <description>***DRAFT pending integration with DMS Attributes data*** Used with Product Attribute integration</description>
    <label>Product Collection Size</label>
    <nameField>
        <label>Collection Product Size Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Collection Sizes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>