force-app/main/default/objects/Product_Collection_Size__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used in Product Attribute integration</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Collection Sizes</relationshipLabel>
    <relationshipName>Product_Collection_Sizes</relationshipName>
    <type>Lookup</type>
</CustomField>