force-app/main/default/objects/Product_Collection_Size__c/fields/Size_X__c.field-meta.xml
<CustomField>
    <fullName>Size_X__c</fullName>
    <description>Used in Product Attributes integration</description>
    <label>Size X</label>
    <type>TextArea</type>
</CustomField>