force-app/main/default/objects/Product_Collection_Size__c/fields/Size_Y__c.field-meta.xml
<CustomField>
    <fullName>Size_Y__c</fullName>
    <description>Used in Product Attribute integration</description>
    <label>Size Y</label>
    <type>TextArea</type>
</CustomField>